cmake_minimum_required(VERSION 3.10)
project(Cpractice)

set(CMAKE_CXX_STANDARD 11)

add_executable(reverse01 reverse/a.cpp )
add_executable(reverse02 reverse/b.cpp )
add_executable(changePosition01 changePosition/change01.cpp)
add_executable(practice01.5.2 practice01/chapter1.5.2.cpp)
add_executable(practice01.5.3 practice01/chapter1.5.3.cpp)


